fixed alignment issue

--- a/LESS/home-page.less
+++ b/LESS/home-page.less
@@ -86,6 +86,7 @@ section {
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
+        align-items: center;
 
         .hero-copy {
             opacity: 1;
